--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,30 +1,78 @@
 komagata:
   login_name: komagata
-  first_name: Masaki
-  last_name: Komagata
   email: komagata@fjord.jp
   crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
   salt: zW3kQ9ubsxQQtzzzs4ap
-  updated_at: <%= Time.new(2014, 1, 10, 0, 0, 0) %>
-  retire: false
-  nda: true
+  first_name: Masaki
+  last_name: Komagata
+  twitter_url: http://twitter.com/komagata
+  facebook_url: http://www.facebook.com/komagata1111
+  blog_url: http://komagata.org
+  feed_url: http://docs.komagata.org/index.atom
+  company: company_1
+  description: "平日１０〜１９時勤務です。"
+  updated_at: "2014-01-01 00:00:00"
+  created_at: <%= Date.today.to_s(:db) %>
 
 machida:
   login_name: machida
+  email: machidanohimitsu@gmail.com
+  crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
+  salt: zW3kQ9ubsxQQtzzzs4ap
   first_name: Teppei
   last_name: Machida
-  email: machida@fjord.jp
-  crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
-  salt: zW3kQ9ubsxQQtzzzs4ap
-  updated_at: <%= Time.new(2014, 1, 1, 0, 0, 0) %>
-  nda: true
+  twitter_url: http://twitter.com/machida
+  facebook_url:
+  blog_url: http://machida.fjord.jp/
+  feed_url: http://machida.fjord.jp/feed
+  company: company_1
+  description: "月曜日と木曜日の午前中勤務です。"
+  updated_at: "2014-01-01 00:00:00"
+  created_at: <%= (Date.today - 7).to_s(:db) %>
 
-retire:
-  login_name: retire
-  first_name: Netarou
-  last_name: Sannen
-  email: netarou@fjord.jp
+tanaka:
+  login_name: tanaka
+  email: tanaka@fjord.jp
   crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
   salt: zW3kQ9ubsxQQtzzzs4ap
+  first_name: Taro
+  last_name: Tanaka
+  twitter_url: http://twitter.com/tanaka
+  facebook_url: http://www.facebook.com/tanaka
+  blog_url: http://tanaka.com
+  feed_url: http://tanaka.com/index.atom
+  company: company_1
+  description: "田中です。"
+  created_at: <%= Date.today %>
+  graduation: true
+
+mineo:
+  login_name: mineo
+  email: mineo@fjord.jp
+  crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
+  salt: zW3kQ9ubsxQQtzzzs4ap
+  first_name: Jirou
+  last_name: Mineo
+  twitter_url: http://twitter.com/mineo
+  facebook_url: http://www.facebook.com/mineo
+  blog_url: http://mineo.com
+  feed_url: http://mineo.com/index.atom
+  company: company_1
+  description: "峰尾です。"
+  created_at: <%= Date.today %>
+  adviser: true
+
+yameo:
+  login_name: yameo
+  email: yameo@example.com
+  crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
+  salt: zW3kQ9ubsxQQtzzzs4ap
+  first_name: 辞目夫
+  last_name: 辞目
+  twitter_url: http://twitter.com/yameo
+  facebook_url: http://www.facebook.com/yameo
+  blog_url: http://yameo.org
+  company: company_1
+  description: "リタイアしました。"
   retire: true
-  nda: true
+  created_at: <%= Date.current.to_s(:db) %>
