--- a/test/fixtures/checks.yml
+++ b/test/fixtures/checks.yml
@@ -1,9 +1,7 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-report_check_1:
-  user: machida
+report_check_komagata:
+  user: komagata
   report: report_1
 
-report_check_2:
-  user: komagata
+report_check_machida:
+  user: machida
   report: report_1
