--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -23,3 +23,21 @@ report_4:
   title: "256interns で Bootstrap のバージョン更新"
   description: |-
     256interns で Bootstrap のバージョン更新を行った他、デザインの微調整を行いました。
+
+report_5:
+  user: tanaka
+  title: "学習週1日目"
+  description: |-
+    今日は　Rubyの基礎 を学習しました。
+
+report_6:
+  user: tanaka
+  title: "学習週2日目"
+  description: |-
+    今日は　Railsの基礎 を学習しました。
+
+report_7:
+  user: tanaka
+  title: "学習週3日目"
+  description: |-
+    今日は　RSpecの基礎 を学習しました。
