--- a/circle.yml
+++ b/circle.yml
@@ -6,10 +6,14 @@ machine:
 
 dependencies:
   pre:
-    - gem install bundler
+    - gem install bundler rubocop
 
 database:
   override:
     - bundle exec rake db:drop
     - bundle exec rake db:create RAILS_ENV=test
     - bundle exec rake db:migrate RAILS_ENV=test
+
+test:
+  pre:
+    - rubocop
