--- a/package.json
+++ b/package.json
@@ -22,6 +22,16 @@
     "markdown-it": "^5.1.0",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-emoji": "^1.4.0",
-    "pygments-css": "^1.0.0"
+    "pygments-css": "^1.0.0",
+    "webpack-dev-server": "^2.9.4"
+  },
+  "dependencies": {
+    "@rails/webpacker": "^3.0.2",
+    "marked": "^0.3.6",
+    "pug": "^2.0.0-rc.4",
+    "vue": "^2.5.3",
+    "vue-loader": "^13.4.0",
+    "vue-template-compiler": "^2.5.3",
+    "whatwg-fetch": "^2.0.3"
   }
 }
