--- a/app.json
+++ b/app.json
@@ -1,37 +1,20 @@
 {
   "name":"interns",
-  "scripts":{},
+  "scripts":{
+    "postdeploy": "rails db:migrate db:seed"
+  },
   "env":{
-    "GEM_PATH":{
-      "required":true
-    },
-    "INTERN_PASSWORD":{
-      "required":true
-    },
-    "LANG":{
-      "required":true
-    },
-    "PATH":{
-      "required":true
-    },
-    "RACK_ENV":{
-      "required":true
-    },
-    "RAILS_ENV":{
-      "required":true
-    },
-    "ROOM_ID":{
-      "required":true
-    },
-    "SECRET":{
-      "required":true
-    },
-    "SLACK_WEBHOOK_URL":{
-      "required":true
-    },
-    "TZ":{
-      "required":true
-    }
+    "RACK_ENV": "review",
+    "RAILS_ENV": "review",
+    "HEROKU_APP_NAME": { "required": true },
+    "HEROKU_PARENT_APP_NAME": { "required": true },
+    "GOOGLE_STORAGE_BUCKET_NAME": "256interns-review",
+    "GOOGLE_STORAGE_ACCESS_KEY": { "required": true },
+    "GOOGLE_STORAGE_SECRET": { "required": true },
+    "INTERN_PASSWORD":{ "required":true },
+    "ROOM_ID":{ "required":true },
+    "SECRET":{ "required":true },
+    "SLACK_WEBHOOK_URL":{ "required":true }
   },
   "addons":[
     "sendgrid",
