--- a/circle.yml
+++ b/circle.yml
@@ -1,19 +1,15 @@
 machine:
   timezone:
     Asia/Tokyo
+  node:
+    version: 8.2.0
   ruby:
     version: 2.4.1
 
 dependencies:
   pre:
-    - gem install bundler rubocop
-
-database:
-  override:
-    - bundle exec rake db:drop
-    - bundle exec rake db:create RAILS_ENV=test
-    - bundle exec rake db:migrate RAILS_ENV=test
+    - gem install bundler
 
 test:
-  pre:
-    - rubocop
+  override:
+    - ./bin/rails test
