--- a/test/fixtures/artifacts.yml
+++ b/test/fixtures/artifacts.yml
@@ -1,11 +1,19 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+artifact_1:
+  user: tanaka
+  practice: practice_3
+  content: "課題完了しました。ご確認宜しくお願い致します。 \n [課題](http://256interns.com/)"
 
-one:
-  user: one
-  practice: one
-  content: MyText
+artifact_3:
+  user: mineo
+  practice: practice_3
+  content: "課題完了しました。ご確認宜しくお願い致します。 \n [課題](http://256interns.com/)"
 
-two:
-  user: two
-  practice: two
-  content: MyText
+artifact_4:
+  user: mineo
+  practice: practice_7
+  content: "viをインストールするの課題完了しました。\n ご確認宜しくお願い致します。 \n [課題](http://256interns.com/)"
+
+artifact_5:
+  user: mineo
+  practice: practice_11
+  content: "課題完了しました。ご確認宜しくお願い致します。 \n [課題](http://256interns.com/)"
