--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "marked": "^0.3.6",
     "pug": "^2.0.0-rc.4",
     "textarea-autosize": "^0.4.2",
+    "textarea-markdown": "^1.0.0",
     "vue": "^2.5.3",
     "vue-loader": "^13.4.0",
     "vue-template-compiler": "^2.5.3",
