提出した成果物を確認出来るようにした。

--- a/test/fixtures/learnings.yml
+++ b/test/fixtures/learnings.yml
@@ -22,3 +22,23 @@ learning_5:
   user: tanaka
   practice: practice_2
   status_cd: 1
+
+learning_to_pending_1:
+  user: tanaka
+  practice: practice_3
+  status_cd: 3
+
+learning_to_pending_2:
+  user: mineo
+  practice: practice_3
+  status_cd: 3
+
+learning_to_pending_3:
+  user: mineo
+  practice: practice_7
+  status_cd: 3
+
+learning_to_pending_4:
+  user: mineo
+  practice: practice_11
+  status_cd: 3
