--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,8 +11,9 @@ komagata:
   feed_url: http://docs.komagata.org/index.atom
   company: company_1
   description: "平日１０〜１９時勤務です。"
-  updated_at: "2014-01-01 00:00:00"
-  created_at: <%= Date.today.to_s(:db) %>
+  mentor: true
+  updated_at: "2014-01-01 00:00:01"
+  created_at: "2014-01-01 00:00:01"
 
 machida:
   login_name: machida
@@ -27,8 +28,9 @@ machida:
   feed_url: http://machida.fjord.jp/feed
   company: company_1
   description: "月曜日と木曜日の午前中勤務です。"
+  mentor: true
   updated_at: "2014-01-01 00:00:00"
-  created_at: <%= (Date.today - 7).to_s(:db) %>
+  created_at: "2014-01-01 00:00:02"
 
 tanaka:
   login_name: tanaka
@@ -43,8 +45,8 @@ tanaka:
   feed_url: http://tanaka.com/index.atom
   company: company_1
   description: "田中です。"
-  created_at: <%= Date.today %>
   graduation: true
+  created_at: "2014-01-01 00:00:03"
 
 mineo:
   login_name: mineo
@@ -59,8 +61,8 @@ mineo:
   feed_url: http://mineo.com/index.atom
   company: company_1
   description: "峰尾です。"
-  created_at: <%= Date.today %>
   adviser: true
+  created_at: "2014-01-01 00:00:04"
 
 yameo:
   login_name: yameo
@@ -75,4 +77,19 @@ yameo:
   company: company_1
   description: "リタイアしました。"
   retire: true
-  created_at: <%= Date.current.to_s(:db) %>
+  created_at: "2014-01-01 00:00:05"
+
+yamada:
+  login_name: yamada
+  email: yamada@fjord.jp
+  crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
+  salt: zW3kQ9ubsxQQtzzzs4ap
+  first_name: Taro
+  last_name: Yamada
+  twitter_url: http://twitter.com/yamada
+  facebook_url: http://www.facebook.com/yamada
+  blog_url: http://yamada.com
+  feed_url: http://yamada.com/index.atom
+  company: company_1
+  description: "山田です。"
+  created_at: "2014-01-01 00:00:06"
