日報に学習日を追加
学習している日を把握するため。
のちのち、連続学習X日などとホームに出したい。

--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -4,6 +4,7 @@ report_1:
   description: |-
     今日はローカルで怖話を動かしてみました。
     rbenv で ruby を動かすのは初めてだったので、色々手間取りました。
+  reported_at: "2017-01-01"
 
 report_2:
   user: komagata
@@ -11,33 +12,39 @@ report_2:
   description: |-
     今日はローカルで Fjord Bootcamp を動かしてみました。
     ruby の指定バージョンが 2.2.3 だったので、 rbenv で ruby のバージョンを上げました。
+  reported_at: "2017-01-02"
 
 report_3:
   user: komagata
   title: "学習週1日目"
   description: |-
     今日は CSS の勉強をしました。デザイン難しい。。。
+  reported_at: "2017-01-03"
 
 report_4:
   user: machida
   title: "Fjord Bootcamp で Bootstrap のバージョン更新"
   description: |-
     Fjord Bootcamp で Bootstrap のバージョン更新を行った他、デザインの微調整を行いました。
+  reported_at: "2017-01-01"
 
 report_5:
   user: tanaka
   title: "学習週1日目"
   description: |-
     今日は　Rubyの基礎 を学習しました。
+  reported_at: "2017-01-01"
 
 report_6:
   user: tanaka
   title: "学習週2日目"
   description: |-
     今日は　Railsの基礎 を学習しました。
+  reported_at: "2017-01-02"
 
 report_7:
   user: tanaka
   title: "学習週3日目"
   description: |-
     今日は　RSpecの基礎 を学習しました。
+  reported_at: "2017-01-03"
