--- a/test/fixtures/learning_times.yml
+++ b/test/fixtures/learning_times.yml
@@ -1,9 +1,9 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+learning_time_1:
+  report: report_1
+  started_at: 2018-03-11 00:00:00
+  finished_at: 2018-03-11 02:00:00
 
-one:
-  started_at: 2018-03-11 01:08:49
-  finished_at: 2018-03-11 01:08:49
-
-two:
-  started_at: 2018-03-11 01:08:49
-  finished_at: 2018-03-11 01:08:49
+learning_time_2:
+  report: report_1
+  started_at: 2018-03-11 10:00:00
+  finished_at: 2018-03-11 15:00:00
