--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@rails/webpacker": "^3.0.2",
     "flatpickr": "^4.3.2",
     "mojik": "^0.5.0",
-    "pug": "^2.0.0-rc.4",
+    "pug": "^2.0.3",
     "textarea-autosize": "^0.4.2",
     "textarea-markdown": "^1.0.0",
     "vue": "^2.5.3",
