--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -5,7 +5,7 @@ report_1:
     今日はローカルで怖話を動かしてみました。
     rbenv で ruby を動かすのは初めてだったので、色々手間取りました。
   reported_at: "2017-01-01"
-  created_at: <%= 2.day.ago %>
+  created_at: "2017-01-01 00:00:00"
 
 report_2:
   user: komagata
@@ -14,7 +14,7 @@ report_2:
     今日はローカルで Fjord Bootcamp を動かしてみました。
     ruby の指定バージョンが 2.2.3 だったので、 rbenv で ruby のバージョンを上げました。
   reported_at: "2017-01-02"
-  created_at: <%= 1.day.ago %>
+  created_at: "2017-01-02 00:00:00"
 
 report_3:
   user: komagata
@@ -22,7 +22,7 @@ report_3:
   description: |-
     今日は CSS の勉強をしました。デザイン難しい。。。
   reported_at: "2017-01-03"
-  created_at: <%= Time.now %>
+  created_at: "2017-01-03 00:00:00"
 
 report_4:
   user: machida
