Wikiページにページネーションを追加
1ページ20件表示できる
Wikiページ表示時にページネーションが存在することを確認する

--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -5,3 +5,9 @@ page_1:
 page_2:
   title: テスト
   body: "## テスト\nテスト"
+
+<% 60.times do |n| %>
+page_dummy_<%= n.to_s %>:
+  title: <%= "WikiPage" + n.to_s %>
+  body: "## テスト"
+<% end %>
