--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ vendor/bundle/
 /public/packs-test
 
 /public/system
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
