--- a/package.json
+++ b/package.json
@@ -1,39 +1,15 @@
 {
-  "name": "bootcamp",
-  "version": "1.0.0",
-  "description": "[![Stories in Ready](https://badge.waffle.io/fjordllc/bootcamp.png?label=ready&title=Ready)](https://waffle.io/fjordllc/bootcamp) # bootcamp",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fjordllc/bootcamp.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fjordllc/bootcamp/issues"
-  },
-  "homepage": "https://github.com/fjordllc/bootcamp#readme",
-  "devDependencies": {
-    "autosize": "^3.0.15",
-    "markdown-it": "^8.4.0",
-    "markdown-it-checkbox": "^1.1.0",
-    "markdown-it-emoji": "^1.4.0",
-    "pygments-css": "^1.0.0",
-    "webpack-dev-server": "^2.9.4"
-  },
   "dependencies": {
-    "@rails/webpacker": "^3.0.2",
-    "flatpickr": "^4.3.2",
+    "@rails/webpacker": "3.5",
+    "markdown-it": "^8.4.2",
     "mojik": "^0.5.0",
     "pug": "^2.0.3",
-    "textarea-autosize": "^0.4.2",
-    "textarea-markdown": "^1.0.0",
-    "vue": "^2.5.3",
-    "vue-loader": "^13.4.0",
-    "vue-template-compiler": "^2.5.3",
-    "whatwg-fetch": "^2.0.3"
+    "textarea-markdown": "^1.2.3",
+    "vue": "^2.5.16",
+    "vue-loader": "14.2.2",
+    "vue-template-compiler": "^2.5.16"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
   }
 }
