--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "autosize": "^4.0.2",
+    "flatpickr": "^4.5.1",
     "markdown-it": "^8.4.2",
+    "markdown-it-plantuml": "^1.2.0",
     "mojik": "^0.5.0",
     "pug": "^2.0.3",
+    "textarea-autosize": "^0.4.2",
     "textarea-markdown": "^1.2.3",
     "vue": "^2.5.16",
     "vue-loader": "14.2.2",
