--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -9,7 +9,7 @@ product_2:
   body: テストの提出物2です。
 
 product_3:
-  practice: practice_1
+  practice: practice_2
   user: tanaka
   body: 確認済みの提出物
   
@@ -24,7 +24,7 @@ product_5:
   body: テストの提出物5です。
 
 product_6:
-  practice: practice_2
+  practice: practice_3
   user: tanaka
   body: 確認待ちの提出物
 
@@ -37,3 +37,13 @@ product_8:
   practice: practice_3
   user: kimura
   body: テストの提出物8です。
+
+product_9:
+  practice: practice_4
+  user: yamada
+  body: テストの提出物9です。
+
+product_10:
+  practice: practice_4
+  user: kimura
+  body: テストの提出物10です。
