提出物一覧に関するテストを追加

--- a/test/fixtures/checks.yml
+++ b/test/fixtures/checks.yml
@@ -26,7 +26,7 @@ report7_check_machida:
   user: machida
   checkable: report_7 (Report)
 
-procuct3_check_komagata:
+itprocuct3_check_komagata:
   user: komagata
   checkable: product_3 (Product)
 
