--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@rails/webpacker": "3.5",
     "autosize": "^4.0.2",
     "flatpickr": "^4.5.1",
+    "hotkeys-js": "^3.3.5",
     "markdown-it": "^8.4.2",
     "markdown-it-plantuml": "^1.2.0",
     "mojik": "^0.5.0",
