--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -109,3 +109,19 @@ kimura:
   description: "木村です。"
   updated_at: "2014-01-01 00:00:07"
   created_at: "2014-01-01 00:00:07"
+
+hatsuno:
+  login_name: hatsuno
+  email: hatsuno@fjord.jp
+  crypted_password: $2a$10$n/xv4/1luueN6plzm2OyDezWlZFyGHjQEf4hwAW1r3k.lCm0frPK.
+  salt: zW3kQ9ubsxQQtzzzs4ap
+  first_name: Shinji
+  last_name: Hatsuno
+  twitter_account: hatsuno
+  facebook_url: http://www.facebook.com/hatsuno
+  blog_url: http://hatsuno.org
+  feed_url: http://hatsuno.org/index.atom
+  company: company_1
+  description: "初野です。"
+  updated_at: "2014-01-01 00:00:08"
+  created_at: "2014-01-01 00:00:08"
