--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -40,3 +40,8 @@ comment_7:
   user: komagata
   commentable: report_4 (Report)
   description: ":thumbsup:"
+
+comment_8:
+  user: komagata
+  commentable: product_10 (Product)
+  description: "提出物のコメントです。"
