--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "textarea-markdown": "^1.2.3",
     "vue": "^2.5.16",
     "vue-loader": "14.2.2",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
