自分の投稿は管理者への通知をしないように修正
管理者が成果物にコメントしたときに通知が来ないように修正

--- a/test/fixtures/practices.yml
+++ b/test/fixtures/practices.yml
@@ -4,6 +4,7 @@ practice_1:
   goal: "OS X Mountain Lionをクリーンインストールする"
   category: category_2
   position: 1
+  submission: true
 
 practice_2:
   title: "Terminalの基礎を覚える"
