Q&A関連のテストを追加・修正
- 質問一覧のテストを追加
- タブ表示機能のテストを修正

--- a/test/fixtures/answers.yml
+++ b/test/fixtures/answers.yml
@@ -17,3 +17,8 @@ answer_4:
   description: テストの回答4です。
   user: komagata
   question: question_3
+
+answer_5:
+  description: テストの回答5です。
+  user: komagata
+  question: question_6
