--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,12 @@ jobs:
             - ~/.cache/yarn
           key: rails-yarn-{{ checksum "yarn.lock" }}
 
+      - run: gem install rubocop
+      - run:
+          name: rubocop
+          command: |
+            rubocop -R -c .rubocop.yml
+
       - run:
           name: Test
           command: |
