--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,12 @@ jobs:
             rubocop -R -c .rubocop.yml
 
       - run:
+          name: Lint
+          command: |
+            gem install slim_lint
+            slim-lint app/views -c config/slim_lint.yml
+
+      - run:
           name: Test
           command: |
             bundle exec rake db:schema:load
