--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "markdown-it-plantuml": "^1.2.0",
     "mojik": "^0.5.0",
     "pug": "^2.0.3",
+    "select2": "^4.0.6-rc.1",
     "textarea-autosize": "^0.4.2",
     "textarea-markdown": "^1.2.3",
     "vue": "^2.5.16",
