--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,8 +8,8 @@ AllCops:
     - '**/vendor/**/*'
     - 'actionpack/lib/action_dispatch/journey/parser.rb'
     - 'railties/test/fixtures/tmp/**/*'
-    - 'railties/test/fixtures/tmp/**/*'
     - 'app/views/**/*'
+    - 'node_modules/**/*'
 
 Performance:
   Exclude:
